--- a/style.css
+++ b/style.css
@@ -88,3 +88,68 @@ span{
     color: var(--text-color);
     box-shadow: 0 0 18px var(--main-color);
 }
+.home-btn{
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: transparent;
+    color:var(--text-color);
+    border: 2px solid var(--text-color);
+    border-radius: 1rem;
+    font-size: 1.6rem;
+    font-weight: 600;
+    transition: all 0.5s ease;
+
+}
+.home-btn:hover{
+    background: var(--main-color);
+    color: var(--text-color);
+    box-shadow: 0 0 18px var(--text-color);
+}
+
+.home{
+    padding:100px 200px;
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+}
+.home .content{
+    z-index: 888;
+    color: var(--text-color);
+    width: 70%;
+    margin-top: 50px;
+}
+.home .content h1{
+    font-size: 5em;
+    font-weight: 900;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    line-height: 75px;
+    margin-bottom: 40px;
+}
+.home .content h1 span{
+    font-size: 1.2em;
+    font-weight: 600;
+}
+.home .content p{
+   margin-bottom: 65px;
+   font-size: 2em;
+}
+.home .media-icons{
+    z-index: 888;
+    position: absolute;
+    right: 15px;
+    display: flex;
+    flex-direction: column;
+    transition: 0.5s ease;
+}
+.home .media-icons a{
+    color: var(--main-color);
+    font-size: 2.5em;
+}
+.home .media-icons a:hover{
+    transform: scale(1.3);
+}
