--- a/style.css
+++ b/style.css
@@ -153,3 +153,50 @@ span{
 .home .media-icons a:hover{
     transform: scale(1.3);
 }
+.home video{
+    z-index: 000;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.slider-navigation{
+    z-index: 888;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(80px);
+    margin-bottom: 12px;
+}
+.slider-navigation .slide-btn{
+    width:12px;
+    height: 12px;
+    background: var(--text-color);
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 0 2px rgba(255,255,255,0.5);
+    transition: 0.3s ease;
+}
+.slider-navigation .slide-btn:not(:last-child){
+    margin-right: 20px;
+}
+.slider-navigation .slide-btn:hover{
+    transform: scale(1.2);
+}
+.slider-navigation .slide-btn.active{
+    background: var(--main-color);
+}
+.slide{
+    position: absolute;
+    width: 100%;
+    clip-path: circle(0% at 0 50%);
+    
+}
+.slide.active{
+    clip-path: circle(150% at 0 50%);
+    transition: 2s ease;
+    transition-property: clip-path;
+}
