--- a/style.css
+++ b/style.css
@@ -290,3 +290,64 @@ i{
     font-size: 30px;
     color: var(--main-color);
 }
+.services{
+    background: var(--bg-color);
+}
+.services-content{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(350px,auto));
+    align-items: center;
+    gap: 2.3rem;
+    margin-top: 4.1rem;
+}
+.row{
+    background: var(--bg-color);
+    border-radius: 27px;
+    border: 1px solid transparent;
+    box-shadow: 0 0 5px var(--main-color);
+    padding: 20px;
+    transition: all 0.5s ease;
+}
+.row img{
+    height: auto;
+    width: 100%;
+    border-radius: 27px;
+    margin-bottom: 1.4rem;
+}
+.row h4{
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    line-height: 1.4;
+    text-align: center;
+}
+.row:hover{
+    border: 1px solid var(--main-color);
+    transform: translateY(-5px)scale(1.04);
+    cursor: pointer;
+}
+
+.heading{
+    color: var(--main-color);
+    font-weight: 700;
+    text-align: justify;
+    font-size: 6.5rem;
+}
+.list-btn{
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    color:var(--text-color);
+    border: 2px solid var(--main-color);
+    border-radius: 1rem;
+    font-size: 1.6rem;
+    font-weight: 600;
+    transition: all 0.5s ease;
+    text-align: center;
+    align-items: center;
+}
+.list-btn:hover{
+    background: var(--main-color);
+    color: var(--text-color);
+    box-shadow: 0 0 18px var(--main-color);
+}
