--- a/style.css
+++ b/style.css
@@ -437,7 +437,7 @@ i{
     border-radius: 25px;
 }
 .banner-btn:hover{
-    background: #74b9ff;
+    background:  #9dc7d2;
 }
 .pricing-content{
     display: grid;
@@ -480,14 +480,7 @@ i{
     font-size: 15px;
     text-align: justify;
 }
-.list-btn{
-    color: var(--text-color);
-    background-color: var(--bg-color);
 
-}
-.list-btn:hover{
-    background-color: #2d3436;
-}
 .rows:hover{
     border: 1px solid var(--main-color);
     transform: translateY(-5px)scale(1.04);
@@ -500,3 +493,40 @@ i{
     gap: 2.3rem;
     margin-top: 4.1rem;
 }
+.member-btn{
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--bg-color);
+    color:var(--text-color);
+    border: 2px solid var(--text-color);
+    border-radius: 1rem;
+    font-size: 1.6rem;
+    font-weight: 600;
+    transition: all 0.5s ease;
+    text-align: center;
+    align-items: center;
+}
+.member-btn:hover{
+    background: #2d3436;
+    color: var(--text-color);
+    box-shadow: 0 0 18px var(--text-color);
+}
+.social-icons{
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--bg-color);
+    color:var(--text-color);
+    font-weight: 600;
+    transition: all 0.5s ease;
+    text-align: justify;
+    align-items: center;
+}
+.social-icons a{
+    color: var(--main-color);
+    font-size: 1.5em;
+    
+}
+.social-icons a:hover{
+    transform: scale(1.3);
+}  
+
