--- a/style.css
+++ b/style.css
@@ -513,13 +513,14 @@ i{
 }
 .social-icons{
     display: inline-block;
-    padding: 1rem 2.8rem;
+    padding: 1.8rem 2.8rem;
     background: var(--bg-color);
     color:var(--text-color);
     font-weight: 600;
     transition: all 0.5s ease;
     text-align: justify;
     align-items: center;
+    
 }
 .social-icons a{
     color: var(--main-color);
@@ -529,4 +530,50 @@ i{
 .social-icons a:hover{
     transform: scale(1.3);
 }  
+.about{
+    z-index: 888;
+    color: var(--text-color);
+    width: 70%;
+    margin-top: 50px;
+    text-align: center;
+}
+.about-img{
+    float: left;
+    box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    height: 90vh;
+    margin: 50px;
 
+}
+
+.about-content .head{
+    font-size: 4.5rem;
+    font-weight: 800;
+    text-align: right;
+}
+.about-content{
+    padding: 0 3rem;
+}
+.about-content p{
+    font-size: 1.6rem;
+    margin: 2rem 0 2rem;
+}
+.about-content h2{
+    text-align: right;
+    line-height: 1.5;
+}
+.about-btn{
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: transparent;
+    color:var(--text-color);
+    border: 2px solid var(--text-color);
+    border-radius: 1rem;
+    font-size: 1.6rem;
+    font-weight: 800;
+    
+
+}
+.about-btn:hover{
+    background: var(--main-color);
+    color: var(--text-color);
+}
