--- a/style.css
+++ b/style.css
@@ -590,3 +590,10 @@ i{
     background: var(--main-color);
     color: var(--text-color);
 }
+.section img{
+    height: auto;
+    width: 100%;
+    border-radius: 27px;
+    margin-bottom: 1.4rem;
+}
+
