--- a/style.css
+++ b/style.css
@@ -606,3 +606,18 @@ i{
 .section i{
     font-size: 18px;
 }
+.gallery{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.gallery img{
+    width: 400px;
+    height: 400px;
+    margin: 10px;
+    object-fit: cover;
+    transition: transform 0.3s ease-in-out;
+}
+.gallery img:hover{
+   transform: scale(1.1);
+}
