--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -620,4 +621,179 @@ i{
 }
 .gallery img:hover{
    transform: scale(1.1);
+}
+
+.cardd{
+    position: relative;
+    background-color: #fff;
+    border-radius: 20px;
+    height: 480px;
+    width: 317px;
+    margin: 20px 0;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.1);
+}
+
+.cardd .cardd-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    position: relative;
+    z-index: 100;
+}
+
+.swiper{
+    width: 950px;
+}
+
+.sec{
+    position: relative;
+    width: 450px;
+    width: 1075px;
+    display: flex;
+    align-items: center;
+}
+
+.sec .cardd .imagee{
+    height: 140px;
+    width: 140px;
+    border-radius: 50%;
+    padding: 3px;
+    background: #fff;
+    box-shadow: 0px -1px 4px 2px rgba(0,0,0,0.25);
+}
+
+.sec .cardd .imagee  img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 3px solid #fff;
+}
+
+.box1{
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    border-radius: 20px 20px 0 0;
+    background: linear-gradient(106.32deg, #f3a60f 14.23%, rgba(255,25,25,0) 139.97%);
+}
+.box2{
+    position: absolute;
+    width: 100%;
+    height: 30%;
+    border-radius: 20px 20px 0 0;
+    background: linear-gradient(106.32deg, rgb(35, 9, 185) 14.23%, rgba(203, 224, 10, 0) 139.97%);
+}
+
+.cardd .media-iconn{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.cardd .media-iconn i{
+    color: rgb(19, 19, 143);
+    opacity: 0.7;
+    margin-top: 10px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.cardd .media-iconn i:hover{
+    opacity: 1;
+    scale: 1.2;
+}
+
+.cardd .name-profession{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 10px;
+}
+
+.name-profession .name{
+    font-size: 20px;
+    font-weight: 600;
+    color: #222;
+}
+.name-profession .profession{
+    font-size: 15px;
+    font-weight: 500;
+    color: #333;
+}
+
+.rating{
+    display: flex;
+    align-items: center;
+    margin-top: 18px;
+}
+
+.cardd .rating i{
+    font-size: 18px;
+    margin: 0 2px;
+    color: orange;
+}
+
+.sec .cardd .aboutt{
+    display: flex;
+    text-align: center;
+    color: #444;
+    margin-top: 45px;
+    margin-bottom: 5px;
+}
+
+.cardd .button{
+    width: 100%;
+    display:flex;
+    justify-content: space-around;
+    margin-top: 20px;
+}
+
+.cardd .b1 button{
+    background: #f3a323;
+}
+
+.cardd .button button{
+    outline: none;
+    border: none;
+    color: #fff;
+    padding: 8px 22px;
+    border-radius: 5px;
+    font-size: 14px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.cardd .button button:hover{
+    opacity: 0.8;
+    scale: 1.3;
+    color: #fff;
+    background: rgb(7, 219, 7);
+}
+
+.swiper-pagination{
+    position: absolute;
+    top: 510px;
+    
+}
+
+
+.swiper-pagination-bullet{
+    height: 15px;
+    width: 15px;
+    border-radius:25px;
+    background:#e634d7;
+}
+
+.swiper-button-next, .swiper-button-prev{
+    opacity: 0.7;
+    color: #fff;
+    transition: all 0.3s ease;
+}
+.swiper-button-next:hover, .swiper-button-prev:hover{
+    opacity: 1;
+    color:#e634d7;
 }
