--- a/style.css
+++ b/style.css
@@ -428,7 +428,7 @@ i{
     font-size: 60px;
   }
   .content p{
-    font-size: 15px;
+    font-size: 20px;
     font-weight: bolder;
   }
 .banner-btn{
@@ -676,7 +676,7 @@ i{
     width: 100%;
     height: 30%;
     border-radius: 20px 20px 0 0;
-    background: linear-gradient(106.32deg, #f3a60f 14.23%, rgba(255,25,25,0) 139.97%);
+    background: linear-gradient(106.32deg, #2980b9 14.23%, rgba(255,25,25,0) 139.97%);
 }
 .box2{
     position: absolute;
@@ -752,9 +752,6 @@ i{
     margin-top: 20px;
 }
 
-.cardd .b1 button{
-    background: #f3a323;
-}
 
 .cardd .button button{
     outline: none;
@@ -771,7 +768,7 @@ i{
     opacity: 0.8;
     scale: 1.3;
     color: #fff;
-    background: rgb(7, 219, 7);
+    
 }
 
 .swiper-pagination{
@@ -785,15 +782,15 @@ i{
     height: 15px;
     width: 15px;
     border-radius:25px;
-    background:#e634d7;
+    background:#0984e3;
 }
 
 .swiper-button-next, .swiper-button-prev{
     opacity: 0.7;
-    color: #fff;
+    color:#0984e3;
     transition: all 0.3s ease;
 }
 .swiper-button-next:hover, .swiper-button-prev:hover{
     opacity: 1;
-    color:#e634d7;
+    color:#0984e3;
 }
