--- a/style.css
+++ b/style.css
@@ -436,6 +436,11 @@ i{
     background-color: var(--text-color);
     font-weight: 900;
     border-radius: 25px;
+    padding: 1rem 2.8rem;
+    border: 2px solid var(--main-color);
+    border-radius: 1rem;
+    font-size: 1.6rem;
+    
 }
 .banner-btn:hover{
     background:  #9dc7d2;
@@ -793,4 +798,118 @@ i{
 .swiper-button-next:hover, .swiper-button-prev:hover{
     opacity: 1;
     color:#0984e3;
+}
+.submit-banner{
+    background-image: url("Media/submit\ banner.webp"); 
+    background-size: cover;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    color: #ffffff; 
+
+}
+.submit-content{
+    display: flex;
+    text-align: justify;
+    align-items: center;
+    margin-left: 500px;
+    color: var(--text-color);
+    justify-content: center;
+    
+}
+.dash-input{
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    outline: none;
+    height: 30px;
+
+    
+}
+
+.submit-content h2{
+    font-size: 15px;
+    font-weight: 500;
+}
+.submit-btn{
+    padding: 1rem 2.8rem;
+    background: transparent;
+    color:var(--text-color);
+    border: 2px solid var(--text-color);
+    border-radius: 1rem;
+    font-size: 1.6rem;
+    font-weight: 700;
+    transition: all 0.5s ease;
+
+}
+
+.submit-btn:hover{
+    background: var(--main-color);
+    color: var(--text-color);
+    box-shadow: 0 0 18px var(--text-color);
+}
+
+footer {
+    background-color:var(--bg-color);
+    color: #fff;
+    padding: 20px;
+    
+}
+
+.footer-container {
+    display: flex;
+    justify-content: space-between;
+    
+}
+
+
+
+.useful-links, .support, .contact {
+    flex: 1;
+}
+
+
+
+ul {
+    list-style: none;
+    padding: 0;
+    text-align: justify;
+}
+
+li {
+    margin-bottom: 5px;
+    font-size: 14px;
+}
+
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
+.icons {
+    text-align: justify;
+    font-size: 10px;
+    
+}
+
+.social-icons a {
+    margin: 0 5px;
+    font-size: 5px;
+}
+.copyright{
+    text-align: center;
+    font-size: 14px;
+}
+.join-btn{
+    background-color: #0984e3;
+    padding: 1rem 2.8rem;
+    color:var(--text-color);
+    border: 2px solid var(--text-color);
+    border-radius: 1rem;
+    font-size: 1.6rem;
+    font-weight: 600;
+}
+.join-btn:hover{
+    background-color: #2980b9;
+    
 }
