--- a/staff.css
+++ b/staff.css
@@ -36,7 +36,7 @@ nav a {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 60vh;
+    height: 50vh;
    
 }
 
@@ -48,7 +48,6 @@ nav a {
     margin-top: 5px;
     padding: 40px;
     background-color: rgba(255, 255, 225, 0.2);
-    align-items: center;
     
     
 }
@@ -75,7 +74,7 @@ input {
     
 }
 
-.staff {
+button {
     display: block;
     margin-top: 10px;
     padding: 10px;
@@ -90,7 +89,7 @@ input {
     border-radius:5px;
 }
 
-.staff:hover {
+button:hover {
     background-color: #444;
 }
 
@@ -117,7 +116,6 @@ a {
     background-color:#2980b9;
     color: white;
     font-size: 18px;
-    
 }
 .button:hover{
     background-color: #007bff;
