--- a/login.css
+++ b/login.css
@@ -100,7 +100,7 @@ p {
 }
 
 a {
-    color: #007bff;
+    color: #c0392b;
     text-decoration: none;
 }
 .button{
@@ -114,11 +114,11 @@ a {
     text-align: center;
     width: 50%;
     border-radius:5px;
-    background-color:#2980b9;
+    background-color:red;
     color: white;
     font-size: 18px;
     
 }
 .button:hover{
-    background-color: #007bff;
+    background-color: #c0392b;
 }
