--- a/staff.css
+++ b/staff.css
@@ -39,7 +39,14 @@ nav a {
     height: 50vh;
    
 }
-
+.error{
+    color: red;
+    border: 1px solid red;
+    text-align: center;
+    padding: 12px;
+    font-size: 22px;
+    margin-bottom: 10px;
+}
 .login-form {
     background-color: #fff;
     border-radius: 30px;
