--- a/admin/style.css
+++ b/admin/style.css
@@ -75,3 +75,34 @@ h1,h2{
     height: 40px;
     float: right;
 }
+.container .content{
+    position: relative;
+    margin-top: 10vh;
+    min-height: 90vh;
+
+}
+.container .content .cards{
+    padding: 20px 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+.container .content .cards .card{
+    width: 250px;
+    height: 150px;
+    background: white;
+    margin: 20px 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.container .content .cards .card .box{
+
+}
+.container .content .cards .card .box img{
+    width: 30px;
+    height: 30px;
+}
